--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-<head>
+
 <meta name="description" content="[my resume 2024]">
   <title>My Resume 2024</title>
-</head>
-<link rel="stylesheet" href"style.css"/>
+<head>
+<link rel="stylesheet" href="style.css"/>
+<head
 <body>
     <div class="header">
         <img class="portait" src="https://media.licdn.com/dms/image/C5603AQHxlPnhN_Nq0Q/profile-displayphoto-shrink_800_800/0/1579443843735?e=1714608000&v=beta&t=MqM4R19UcAIsDqCi1OPQxvaxBdsLb-xaOro2ystXyEU" />
@@ -17,7 +18,7 @@
             <li>padifa7@live.fr</a></li>
             <li>701 491 01 57</li>
             <li>4243 9th avenue circle south, Fargo, ND, USA</li>
-<head/>
+
           </p>
         </div>
         <div class="section">
