--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
-<meta name="description" content="[my resume 2024]">
-  <title>My Resume 2024</title>
+<!DOCTYPE html>
+<html>
 <head>
 <link rel="stylesheet" href="style.css"/>
 <head
